--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -188,6 +188,7 @@ body.join main.form fieldset:nth-of-type(3) {
     border-radius: 8px; 
     background-color: var(--background-color-salmon);
     gap: 20px; /* Adds spacing between the radio buttons and table */
+    margin-top: 15px;
 }
 
 
@@ -1550,6 +1551,7 @@ body.join main.form fieldset:nth-of-type(2) label {
         border-radius: 8px; 
         background-color: var(--background-color-salmon);
         gap: 20px; /* Adds spacing between the radio buttons and table */
+        margin-top: 15px;
     }
     
 
